Added load aware for images (index and meninger pages)

--- a/meninger/index.html
+++ b/meninger/index.html
@@ -15,13 +15,13 @@ title: Front page
         <div class="large-12 columns">
             <article class="">
                 <a href="leder-n.html">
-                    <img alt="" src="http://www.plattphotography.com/data/photos/279_10017_platt_photography_george_w_bush_event_photography.jpg">
+                    <img id="nf-meninger-main" alt="" src="">
                     <header>
                         <h1 class="title">En president vender tilbake</h1>
                         <p class="lead">Etter to lange perioder vurderer Jr å gi politikken en ny sjanse. Her er 10 grunner til at han vil lykkes.</p>
-                    </header>       
+                    </header>
                 </a>
-                                                            
+
             </article>
         </div>
     </div>
