--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Front page
     <div class="large-12 columns">
       <article class="">
         <a href="/story/">
-        <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
+        <img id="nf-index-main" alt="" src="">
         <header>
           <h1 class="title"> Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
           <p class="lead">Temperamentet er en styrke, mener Tom Nordlie. Vi har spurt spillerne hva de tenker.</p>
@@ -85,7 +85,6 @@ title: Front page
 {% include series-section.html %}
 
 <div class="row nf-desktop-ad"></div>
-<!-- include ad-desktop-1.html -->
 
 <section class="l-container front-section">
   <header class="section--header center">
