--- a/s/index.html
+++ b/s/index.html
@@ -13,7 +13,7 @@ title: Search
 <header class="object-header row">
 
   <div class="small-12 columns">
-    <form id="nf-search-form" class="nf-sbform nf-sbopen" action="search.html" method="get" data-ajax="false">
+    <form id="nf-search-form" class="nf-sbform nf-sbopen" action="/s/" method="get" data-ajax="false">
       <input id="nf-search-q" type="text" name="q" placeholder="Enter search here...">
       <input type="submit" value="">
       <span class="nf-search-button"></span>
