#3437 Separate state from grid module + tweak base grid style

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Front page
   </div>
 </section>
 
-<section class="l-container front-section most-popular article-grid grid-style--minimal">
+<section class="l-container front-section grid-style grid-style--minimal is-popular">
   <header class="section--header center">
     <h2 class="title">Grid 1</h2>
   </header>
@@ -39,7 +39,7 @@ title: Front page
   </div>
 </section>
 
-<section class="l-container front-section article-grid grid-style--bordered">
+<section class="l-container front-section grid-style grid-style--bordered">
   <header class="section--header center">
     <h2 class="title">Grid 2</h2>
   </header>
