#3437 Article featured module

--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@ title: Front page
 
 <div class="row nf-desktop-ad-sidebar"></div>
 
-<section class="main-story frontpage-section">
-  <div class="row ">
-    <div class="large-12 columns">
-      <article class="">
-        <a href="/story/">
-        <img id="nf-index-main" alt="" src="">
+<section class="l-container article-featured">
+  <h2 hidden>Featured article</h2>
+  <div class="l-row">
+    <article>
+      <a href="/story/">
         <header>
+          <img id="nf-index-main" alt="" src="">
           <h1 class="title"> Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
-          <p class="lead">Temperamentet er en styrke, mener Tom Nordlie. Vi har spurt spillerne hva de tenker.</p>
         </header>
-        </a>
 
-      </article>
-    </div>
+        <p>Temperamentet er en styrke, mener Tom Nordlie. Vi har spurt spillerne hva de tenker.</p>
+      </a>
+    </article>
   </div>
 </section>
 
