Added main menu to index page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: mag
 title: Front page
 ---
 
-<header class="section-header">
-  <div class="l-row">
-  <h1><a href="/">Forside</a></h1>
+<header class="section-header" style="padding: 0;">
+  <div class="row">
+    {% include menu-main.html %}
   </div>
 </header>
 
