--- a/news-n.html
+++ b/news-n.html
@@ -2,301 +2,40 @@
 layout: mag
 title: News section
 ---
-<section class="top">
-<!-- <h2 class="center"><span>Mest populært på NewsFront</span></h2> -->
-    <div class="row ">
-        <div class="large-12 columns">
-            <article class="">
-                <a href="buy.html">
-                <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
-                <header>
-                    <h1 class="title"> Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
-                    <p class="lead">Temperamentet er en styrke, mener Tom Nordlie.</p>
-                </header>
-                </a>
 
-            </article>
-        </div>
-    </div>
+<section class="l-container article-featured front-section">
+  <h2 hidden>Featured article</h2>
+  <div class="l-row">
+    <article>
+      <a href="buy.html">
+        <header>
+          <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
+          <h1 class="title">Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
+          </a>
+        </header>
+
+        <p>Temperamentet er en styrke, mener Tom Nordlie.</p>
+      </a>
+    </article>
+  </div>
 </section>
 
-<section class="most-popular article-grid">
-    <h2 class="center"><span>Mest populært på NewsFront</span></h2>
-    <div class="row ">
-
-    </div>
-    <div class="row ">
-        <div class="large-4 columns">
-            <article class="">
-                <a href="story-n.html">
-                <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
-                <header>
-                    <h1 class="title"><span class="label">Betalt</span>  Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
-                    <p class="lead">Temperamentet er en styrke, mener Tom Nordlie.</p>
-                </header>
-                </a>
-
-            </article>
-        </div>
-
-        <div class="large-4 columns">
-                <article class="">
-                    <a href="story-n.html">
-                    <img alt="" src="http://gfx.dagbladet.no/labrador/268/268636/26863655/jpg/active/646x270.jpg">
-                    <header>
-                        <h1 class="title">- Jeg må innrømme at Sammer var litt for tysk for meg</h1>
-                        <p class="lead">Den tyske mesterhjernen får æren for at tysk fotball har reist seg.</p>
-                    </header>
-                    </a>
-
-                </article>
-        </div>
-        <div class="large-4 columns">
-                <article class="">
-                    <a href="story-n.html">
-                    <img alt="" src="http://gfx.dagbladet.no/labrador/268/268614/26861419/jpg/active/646x270.jpg">
-                    <header>
-                        <h1 class="title">- Det har blitt en del forespørsler om date, middag, kino og alt mulig.</h1>
-                        <p class="lead">«Idol»-Astrid sier ja til alt fordi hun synes det er fælt å si nei.</p>
-                    </header>
-                    </a>
-
-                </article>
-        </div>
-        <div class="large-4 columns">
-                <article class="">
-                    <a href="story-n.html">
-                    <img alt="" src="http://gfx.dagbladet.no/labrador/268/268435/26843519/jpg/active/646x270.jpg">
-                    <header>
-                        <h1 class="title">Bruk smertepillene riktig</h1>
-                        <p class="lead">Bruken av reseptbelagte smertepiller øker.</p>
-                    </header>
-                    </a>
-
-                </article>
-        </div>
-        <div class="large-4 columns">
-                <article class="">
-                    <a href="story-n.html">
-                    <img alt="" src="http://gfx.dagbladet.no/labrador/268/268775/26877583/jpg/active/646x270.jpg">
-                    <header>
-                        <h1 class="title">Sto klare til å fly til Lillehammer for å bortføre kronprins Olav</h1>
-                        <p class="lead">Ble avblåst i siste liten fordi isen på Mjøsa ikke var tjukk nok.</p>
-                    </header>
-                    </a>
-
-                </article>
-        </div>
-        <div class="large-4 columns">
-            <article class="">
-                <a href="story-n.html">
-                <img alt="" src="http://gfx.dagbladet.no/labrador/268/268272/26827233/jpg/active/646x270.jpg">
-                <header>
-                    <h1 class="title">Husarbeid og barnepass er ikke kulturutveksling</h1>
-                    <p class="lead">Det kan være et moderne slaveri, skriver Marie Simonsen.</p>
-                </header>
-                </a>
-
-            </article>
-        </div>
-    </div>
+<section class="l-container grid-style grid-style--minimal is-popular front-section">
+  <header class="section--header center">
+    <h2 class="title">Mest populært på NewsFront</h2>
+  </header>
+  <div class="l-row">
+    {% include article-grid.html %}
+  </div>
 </section>
 
-<section class="less-popular article-grid">
-    <h2 class="center"><span>Minst populært på NewsFront</span></h2>
-    <div class="row">
-        <div class="large-3 small-6 columns story-promo">
-            <article class="">
-                <a href="story-n.html">
-                    <img alt="" src="http://gfx.dagbladet.no/labrador/268/268435/26843519/jpg/active/646x270.jpg">
-                    <header>
-                        <h1 class="title">Bruk smertepillene riktig</h1>
-                        <p class="lead">Bruken av reseptbelagte smertepiller øker.</p>
-                    </header>
-                </a>
-            </article>
-        </div>
-        <div class="large-3 small-6 columns story-promo">
-                <article class="">
-                    <a href="story-n.html">
-                    <img alt="" src="http://gfx.dagbladet.no/labrador/268/268775/26877583/jpg/active/646x270.jpg">
-                    <header>
-                        <h1 class="title">Sto klare til å fly til Lillehammer for å bortføre kronprins Olav</h1>
-                        <p class="lead">Ble avblåst i siste liten fordi isen på Mjøsa ikke var tjukk nok.</p>
-                    </header>
-                    </a>
-
-                </article>
-        </div>
-        <div class="large-3 small-6 columns story-promo">
-            <article class="">
-                <a href="story-n.html">
-                <img alt="" src="http://gfx.dagbladet.no/labrador/268/268272/26827233/jpg/active/646x270.jpg">
-                <header>
-                    <h1 class="title">Husarbeid og barnepass er ikke kulturutveksling</h1>
-                    <p class="lead">Det kan være et moderne slaveri, skriver Marie Simonsen.</p>
-                </header>
-                </a>
-
-            </article>
-        </div>
-    </div>
-
-    <div class="row ">
-        <div class="large-4 small-6 columns story-promo">
-            <article class="">
-                <a href="story-n.html">
-                <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
-                <header>
-                    <h1 class="title">- Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
-                    <p class="lead">Temperamentet er en styrke, mener Tom Nordlie.</p>
-                </header>
-                </a>
-
-            </article>
-        </div>
-
-        <div class="large-4 small-6 columns story-promo">
-                <article class="">
-                    <a href="story-n.html">
-                    <img alt="" src="http://gfx.dagbladet.no/labrador/268/268636/26863655/jpg/active/646x270.jpg">
-                    <header>
-                        <h1 class="title">- Jeg må innrømme at Sammer var litt for tysk for meg</h1>
-                        <p class="lead">Den tyske mesterhjernen får æren for at tysk fotball har reist seg.</p>
-                    </header>
-                    </a>
-
-                </article>
-        </div>
-        <div class="large-4 small-6 columns story-promo">
-                <article class="">
-                    <a href="story-n.html">
-                    <img alt="" src="http://gfx.dagbladet.no/labrador/268/268614/26861419/jpg/active/646x270.jpg">
-                    <header>
-                        <h1 class="title">- Det har blitt en del forespørsler om date, middag, kino og alt mulig.</h1>
-                        <p class="lead">«Idol»-Astrid sier ja til alt fordi hun synes det er fælt å si nei.</p>
-                    </header>
-                    </a>
-
-                </article>
-        </div>
-        <div class="large-4 small-6 columns story-promo">
-                <article class="">
-                    <a href="story-n.html">
-                    <img alt="" src="http://gfx.dagbladet.no/labrador/268/268435/26843519/jpg/active/646x270.jpg">
-                    <header>
-                        <h1 class="title">Bruk smertepillene riktig</h1>
-                        <p class="lead">Bruken av reseptbelagte smertepiller øker.</p>
-                    </header>
-                    </a>
-
-                </article>
-        </div>
-        <div class="large-4 small-6 columns story-promo">
-                <article class="">
-                    <a href="story-n.html">
-                    <img alt="" src="http://gfx.dagbladet.no/labrador/268/268775/26877583/jpg/active/646x270.jpg">
-                    <header>
-                        <h1 class="title">Sto klare til å fly til Lillehammer for å bortføre kronprins Olav</h1>
-                        <p class="lead">Ble avblåst i siste liten fordi isen på Mjøsa ikke var tjukk nok.</p>
-                    </header>
-                    </a>
-
-                </article>
-        </div>
-        <div class="large-4 small-6 columns story-promo hide-for-small">
-            <article class="">
-                <a href="story-n.html">
-                <img alt="" src="http://gfx.dagbladet.no/labrador/268/268272/26827233/jpg/active/646x270.jpg">
-                <header>
-                    <h1 class="title">Husarbeid og barnepass er ikke kulturutveksling</h1>
-                    <p class="lead">Det kan være et moderne slaveri, skriver Marie Simonsen.</p>
-                </header>
-                </a>
-
-            </article>
-        </div>
-    </div>
+<section class="l-container grid-style grid-style--bordered front-section">
+  <header class="section--header center">
+    <h2 class="title">Minst populært på NewsFront</h2>
+  </header>
+  <div class="l-row">
+    {% include article-grid.html %}
+  </div>
 </section>
 
-<section class="row series" id="series">
-        <h2 class="center"><span>Serier på NewsFront</span></h2>
-        <div class="large-4 columns">
-            <a href="/pluss/spesial/foreldreskolen">
-            </a><article class="series-promo"><a href="/pluss/spesial/foreldreskolen">
-                <img src="http://gfx.dagbladet.no/pluss/spesial/foreldreskolen/foreldreskolen.jpg" alt="">
-                </a><header><a href="/pluss/spesial/foreldreskolen">
-                    <h1 class="m-featured--title">Foreldreskolen</h1>
-                    <p class="m-featured--subtitle">Hver uke i Magasinet tar Håvard Tjora opp problemstillinger rundt oppdragelse.</p>
-                    <hr>
-                    </a><p><a href="/pluss/spesial/foreldreskolen"></a><a href="/pluss/spesial/foreldreskolen" class="button secondary small round">Les spesialen</a></p>
-                </header>
-                <footer>
-                    <p class="m-special-front--counter"><strong>20</strong> artikler</p>
-                    <!--<aside><p>Sist oppdatert 28. januar 2013.</p></aside>-->
-                </footer>
-            </article>
-
-        </div>
-        <div class="large-4 columns">
-                        <a href="#">
-            </a><article class="series-promo"><a href="/pluss/spesial/pensjonsskolen">
-                <img src="http://gfx.dagbladet.no/pluss/spesial/pensjonsskolen/pensjonsskolen.jpeg" alt="">
-                </a><header><a href="#">
-                    <h1 class="">Pensjonsskolen</h1>
-                    <p class="">Vet du hva du får i pensjon? Vet du hvilke grep du bør ta - og hvilke feller du bør unngå - for å sikre økonomien som pensjonist? Dagbladets Pensjonsskole har alle svarene - og de gode rådene.</p>
-                    <hr>
-                    </a><p><a href="" class="button secondary small round">Les spesialen</a></p>
-                </header>
-                <footer>
-                    <p class=""><strong>18</strong> artikler</p>
-                </footer>
-            </article>
-
-        </div>
-        <div class="large-4 columns">
-            <a href="/pluss/spesial/bokettersynet">
-            </a><article class="series-promo"><a href="/pluss/spesial/bokettersynet">
-                <img src="http://gfx.dagbladet.no/pluss/spesial/bokettersynet/bokhylle.jpg" alt="">
-                </a><header><a href="/pluss/spesial/bokettersynet">
-                    <h1 class="">Bokettersynet</h1>
-                    <p class="">Bli med hjem og se i bokhylla til kjente nordmenn. Bøkene avslører skjulte sider ved de som eier dem.</p>
-                    <hr>
-                    </a><p><a href="#"></a><a href="#" class="button secondary small round">Les spesialen</a></p>
-                </header>
-                <footer>
-                    <p class="m-special-front--counter"><strong>9</strong> artikler</p>
-                </footer>
-            </article>
-
-        </div>
-        <!-- <aside class="large-10 columns offset-by-one end m-section-about">
-            <p><strong>Spesialer</strong> er vår måte å samle artikler som hører sammen. De kan enten dele tema, slik som <a href="/pluss/spesial/foreldreskolen/">Foreldreskolen</a>, eller være innenfor samme journalistiske sjanger, slik som <a href="/pluss/spesial/bokettersynet/">Bokettersynet</a>. Følg med her for flere spennende spesialer i tiden fremover.</p>
-            <p><a href="/pluss/spesial/" class="button secondary">Se alle spesialene våre</a></p>
-        </aside> -->
-</section>
-
-
-<!-- <section class="portrait has-background">
-
-    <div class="background-image">
-        <img src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/1956x818.jpg" />
-    </div>
-
-    <div class="overlay">
-            <div class="row">
-                <div class="large-12 columns">
-
-                    <h2>
-                        Portrettet
-                    </h2>
-                    <article class="article-portrait">
-                        <h1 class="title"><a href="story-n.html">- Jeg har egentlig ikke vært meg selv på tre-fire år</a></h1>
-                        <p class="lead"><a href="story-n.html">Temperamentet er en styrke, mener Tom Nordlie.</a></p>
-                    </article>
-
-                </div>
-            </div>
-        </div>
-    </div>
-</section> -->
+{% include series-section.html %}
