#3437 Cleanup header bar markup

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@ layout: mag
 title: Front page
 ---
 
-<header class="section-header" style="padding: 0;">
-  <div class="row">
+<header class="section-header">
+  <div class="l-row">
     {% include menu-main.html %}
   </div>
 </header>
 
-<div class="row nf-desktop-ad"></div>
+<div class="l-row nf-desktop-ad"></div>
 
-<div class="row nf-desktop-ad-sidebar"></div>
+<div class="l-row nf-desktop-ad-sidebar"></div>
 
 <section class="l-container article-featured">
   <h2 hidden>Featured article</h2>
