--- a/s/index.html
+++ b/s/index.html
@@ -2,12 +2,11 @@
 layout: mag
 title: Search
 ---
+
 <header class="section-header">
-    <div class="row">
-      <div class="large-12 columns">
-        <h1><a href="front-mag.html">Søk</a></h1>
-      </div>
-    </div>
+  <div class="l-row">
+    <h1><a href="front-mag.html">Søk</a></h1>
+  </div>
 </header>
 
 <header class="object-header row">
