#3437 Move out obsolete files; refactor markup for search and headers

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Front page
     <article>
       <a href="/story/">
         <header>
-          <img id="nf-index-main" alt="" src="">
+          <img id="nf-index-main" alt="" src="#">
           <h1 class="title"> Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
         </header>
 
