--- a/kultur/index.html
+++ b/kultur/index.html
@@ -2,14 +2,10 @@
 layout: mag
 title: Front page
 ---
-<header class="section-header">
-    <div class="row">
-      <div class="large-12 columns">
-        <h1><a href="front-mag.html">Kultur</a></h1>
-      </div>
-    </div>
-</header>
 
+<header class="section-header">
+  <h1 class="title">Kultur</h1>
+</header>
 
 {% include hero-section-top.html %}
 
@@ -23,9 +19,9 @@ title: Front page
                 <header>
                     <h1 class="title">- Vil dere vite hvorfor jeg alltid kommer tilbake til Norge?</h1>
                     <p class="lead">Country-fenomenet Taylor Swift trollbinder publikum med ord og toner. Og ikke så rent lite sjarm.</p>
-                </header>       
+                </header>
                 </a>
-                                                            
+
             </article>
         </div>
     </div>
