--- a/meninger/index.html
+++ b/meninger/index.html
@@ -2,12 +2,9 @@
 layout: mag
 title: Front page
 ---
+
 <header class="section-header">
-    <div class="row">
-      <div class="large-12 columns">
-        <h1><a href="section-meninger.html">Meninger</a></h1>
-      </div>
-    </div>
+  <h1 class="title">Meninger</h1>
 </header>
 
 <section class="frontpage-section main-story">
