--- a/s/index.html
+++ b/s/index.html
@@ -4,46 +4,36 @@ title: Search
 ---
 
 <header class="section-header">
-  <div class="l-row">
-    <h1><a href="front-mag.html">Søk</a></h1>
-  </div>
+  <h1 class="title">Søk</h1>
 </header>
 
-<header class="object-header row">
-
-  <div class="small-12 columns">
+<section class="l-container">
+  <header class="l-row">
     <form id="nf-search-form" class="nf-sbform nf-sbopen" action="/s/" method="get">
       <input id="nf-search-q" type="text" name="q" placeholder="Søk Newsfront...">
       <input type="submit" value="">
     </form>
+
+    <div class="grid-3">
+        <span class="result-number">0 treff</span>
+        <span class="result-query"></span>
+    </div>
+
+    <div class="grid-9 omega">
+      <dl class="sub-nav right">
+        <dt>Siste:</dt>
+        <dd class="active"><a href="#">Alle</a></dd>
+        <dd><a href="#">7 dager</a></dd>
+        <dd><a href="#">30 dager</a></dd>
+      </dl>
+    </div>
+  </header>
+
+  <div class="l-row" id="article-list">
+    {% include serp.html %}
   </div>
 
-  <!-- div class="small-12 columns">
-    <form autocomplete="off" id="search-page-form" class="search-page-form">
-      <input type="text" class="search-form-input" name="q" value="obama" autocomplete="off" spellcheck="false">
-    </form>
-  </div -->
-
-  <div class="small-3 columns">
-      <span class="result-number">0 treff</span>
-      <span class="result-query"></span>
+  <div class="load-more center" hidden>
+    <a href="javascript:void(0);" onclick="nfSolr.showMore();" class="btn-simple soft">Se flere treff</a>
   </div>
-
-  <div class="small-9 columns">
-    <dl class="sub-nav right">
-      <dt>Siste:</dt>
-      <dd class="active"><a href="#">Alle</a></dd>
-      <dd><a href="#">7 dager</a></dd>
-      <dd><a href="#">30 dager</a></dd>
-    </dl>
-  </div>
-
-</header>
-
-<div class="row" id="article-list">
-  {% include serp.html %}
-</div>
-
-<div class="load-more center" style="display: none;">
-  <a href="javascript:void(0);" onclick="nfSolr.showMore();" class="btn-simple soft">Se flere treff</a>
-</div>
+</section>
