--- a/meninger/leder/index.html
+++ b/meninger/leder/index.html
@@ -2,12 +2,9 @@
 layout: mag
 title: Meninger article
 ---
+
 <header class="section-header">
-    <div class="row">
-      <div class="large-12 columns">
-        <h1><a href="front-mag.html">Meninger</a></h1>
-      </div>
-    </div>
+  <h1 class="title"><a href="/meninger/">Meninger</a></h1>
 </header>
 
 <div class="row nf-desktop-ad"></div>
