--- a/abonner/index.html
+++ b/abonner/index.html
@@ -7,52 +7,37 @@ title: Static
   <h1 class="title">Om Newsfront</h1>
 </header>
 
-<section class="hero-section stick-to-top front-section border-bottom">
-    <div style="background-image: url(&quot;http://www.wallgc.com/images/2012/10/men-james-bond-people-actors-daniel-craig-watches-white-background-HD-Wallpapers.jpg&quot;); height: 704px;" class="hero">
-        <div class="overlay overlay-invert center ">
-                <div class="row">
-                    <div class="large-6 columns">
-                        <article class="article-portrait">
-                            <h1 class="title">
-                                <a href="story-n.html">Dette er en <em>statisk</em> side for ditt magasin</a>
-                            </h1>
+<section class="hero hero--top border-bottom" style="background-image: url(http://www.wallgc.com/images/2012/10/men-james-bond-people-actors-daniel-craig-watches-white-background-HD-Wallpapers.jpg); height: 704px;">
 
-                            <a href="#" class="btn-simple">Abonnér nå</a>
-                        </article>
+  <div class="l-row">
+    <div class="grid-6 overlay-invert">
+      <article class="article-portrait center">
+        <h1 class="title">
+          <a href="story-n.html">Dette er en <em>statisk</em> side for ditt magasin</a>
+        </h1>
 
-                    </div>
-                </div>
-            </div>
+        <a href="#" class="btn-simple">Abonnér nå</a>
+      </article>
     </div>
+  </div>
+
 </section>
 
-<div class="row article-wrapper">
-    <div class="large-12 columns">
-        <article itemtype="http://schema.org/Article" role="main" class="article">
-            <header class="center divider">
-                <h2 class="section-heading">Vil du prøve Newsfront?</h2>
-                <span>Cutting. Edge.</span>
-            </header>
-            <div class="row">
-                <div class="large-10 large-centered columns">
+<div class="l-container">
+  <div class="l-row">
+    <article itemtype="http://schema.org/Article" role="main">
+      <header class="section--header center">
+        <h2 class="title">Vil du prøve Newsfront?</h2>
+        <span>Cutting. Edge.</span>
+      </header>
 
-                    <div class="body-content">
-                        <p><strong>Leggings 90's</strong> Marfa photo booth disrupt, fashion axe cornhole DIY biodiesel 3 wolf moon scenester literally keffiyeh blue bottle viral. Mumblecore banh mi blue bottle, typewriter gentrify Odd Future Truffaut Etsy Austin seitan single-origin coffee before they sold out. Swag aesthetic McSweeney's Echo Park. Raw denim post-ironic twee 8-bit helvetica literally.</p>
-                        <p>Polaroid hoodie pug +1 mlkshk keffiyeh 90's Odd Future Terry Richardson. Keytar Williamsburg raw denim, +1 letterpress lomo chillwave sriracha photo booth swag meh. Thundercats ennui you probably haven't heard of them locavore, keffiyeh gentrify Truffaut Terry Richardson gluten-free actually hella dreamcatcher. Retro wolf swag tumblr, salvia tousled Etsy Echo Park narwhal. Roof party kale chips put a bird on it, american apparel art party fashion axe literally. Selvage scenester try-hard wolf, Marfa Portland pour-over tumblr hoodie retro disrupt Echo Park Vice wayfarers. Authentic fap occupy, Brooklyn pour-over 90's lo-fi twee gluten-free church-key Wes Anderson ennui small batch polaroid. Raw denim VHS roof party before they sold out.</p>
-                        <p>Selfies freegan street art retro bicycle rights forage. Readymade 8-bit brunch tumblr, Portland forage aesthetic synth. Pug tumblr Terry Richardson 90's Banksy, farm-to-table whatever typewriter. Hoodie Bushwick banh mi direct trade.</p>
-                    </div>
+      <div class="body-content">
+        <p><strong>Leggings 90's</strong> Marfa photo booth disrupt, fashion axe cornhole DIY biodiesel 3 wolf moon scenester literally keffiyeh blue bottle viral. Mumblecore banh mi blue bottle, typewriter gentrify Odd Future Truffaut Etsy Austin seitan single-origin coffee before they sold out. Swag aesthetic McSweeney's Echo Park. Raw denim post-ironic twee 8-bit helvetica literally.</p>
 
-                </div>
+        <p>Polaroid hoodie pug +1 mlkshk keffiyeh 90's Odd Future Terry Richardson. Keytar Williamsburg raw denim, +1 letterpress lomo chillwave sriracha photo booth swag meh. Thundercats ennui you probably haven't heard of them locavore, keffiyeh gentrify Truffaut Terry Richardson gluten-free actually hella dreamcatcher. Retro wolf swag tumblr, salvia tousled Etsy Echo Park narwhal. Roof party kale chips put a bird on it, american apparel art party fashion axe literally. Selvage scenester try-hard wolf, Marfa Portland pour-over tumblr hoodie retro disrupt Echo Park Vice wayfarers. Authentic fap occupy, Brooklyn pour-over 90's lo-fi twee gluten-free church-key Wes Anderson ennui small batch polaroid. Raw denim VHS roof party before they sold out.</p>
 
-                <!-- <div class="large-4 columns">
-                    <div class="panel">
-                        <h3>Fakta om TIPH</h3>
-
-                    </div>
-                </div> -->
-            </div>
-
-
-        </article>
-    </div>
+        <p>Selfies freegan street art retro bicycle rights forage. Readymade 8-bit brunch tumblr, Portland forage aesthetic synth. Pug tumblr Terry Richardson 90's Banksy, farm-to-table whatever typewriter. Hoodie Bushwick banh mi direct trade.</p>
+      </div>
+    </article>
+  </div>
 </div>
