--- a/abonner/index.html
+++ b/abonner/index.html
@@ -25,18 +25,20 @@ title: Static
 
 <div class="l-container">
   <div class="l-row">
-    <article itemtype="http://schema.org/Article" role="main">
+    <article itemtype="http://schema.org/Article" role="main" class="article">
       <header class="section--header center">
         <h2 class="title">Vil du prøve Newsfront?</h2>
         <span>Cutting. Edge.</span>
       </header>
 
-      <div class="body-content">
-        <p><strong>Leggings 90's</strong> Marfa photo booth disrupt, fashion axe cornhole DIY biodiesel 3 wolf moon scenester literally keffiyeh blue bottle viral. Mumblecore banh mi blue bottle, typewriter gentrify Odd Future Truffaut Etsy Austin seitan single-origin coffee before they sold out. Swag aesthetic McSweeney's Echo Park. Raw denim post-ironic twee 8-bit helvetica literally.</p>
+      <div class="grid-10">
+        <div class="article--body">
+          <p><strong>Leggings 90's</strong> Marfa photo booth disrupt, fashion axe cornhole DIY biodiesel 3 wolf moon scenester literally keffiyeh blue bottle viral. Mumblecore banh mi blue bottle, typewriter gentrify Odd Future Truffaut Etsy Austin seitan single-origin coffee before they sold out. Swag aesthetic McSweeney's Echo Park. Raw denim post-ironic twee 8-bit helvetica literally.</p>
 
-        <p>Polaroid hoodie pug +1 mlkshk keffiyeh 90's Odd Future Terry Richardson. Keytar Williamsburg raw denim, +1 letterpress lomo chillwave sriracha photo booth swag meh. Thundercats ennui you probably haven't heard of them locavore, keffiyeh gentrify Truffaut Terry Richardson gluten-free actually hella dreamcatcher. Retro wolf swag tumblr, salvia tousled Etsy Echo Park narwhal. Roof party kale chips put a bird on it, american apparel art party fashion axe literally. Selvage scenester try-hard wolf, Marfa Portland pour-over tumblr hoodie retro disrupt Echo Park Vice wayfarers. Authentic fap occupy, Brooklyn pour-over 90's lo-fi twee gluten-free church-key Wes Anderson ennui small batch polaroid. Raw denim VHS roof party before they sold out.</p>
+          <p>Polaroid hoodie pug +1 mlkshk keffiyeh 90's Odd Future Terry Richardson. Keytar Williamsburg raw denim, +1 letterpress lomo chillwave sriracha photo booth swag meh. Thundercats ennui you probably haven't heard of them locavore, keffiyeh gentrify Truffaut Terry Richardson gluten-free actually hella dreamcatcher. Retro wolf swag tumblr, salvia tousled Etsy Echo Park narwhal. Roof party kale chips put a bird on it, american apparel art party fashion axe literally. Selvage scenester try-hard wolf, Marfa Portland pour-over tumblr hoodie retro disrupt Echo Park Vice wayfarers. Authentic fap occupy, Brooklyn pour-over 90's lo-fi twee gluten-free church-key Wes Anderson ennui small batch polaroid. Raw denim VHS roof party before they sold out.</p>
 
-        <p>Selfies freegan street art retro bicycle rights forage. Readymade 8-bit brunch tumblr, Portland forage aesthetic synth. Pug tumblr Terry Richardson 90's Banksy, farm-to-table whatever typewriter. Hoodie Bushwick banh mi direct trade.</p>
+          <p>Selfies freegan street art retro bicycle rights forage. Readymade 8-bit brunch tumblr, Portland forage aesthetic synth. Pug tumblr Terry Richardson 90's Banksy, farm-to-table whatever typewriter. Hoodie Bushwick banh mi direct trade.</p>
+        </div>
       </div>
     </article>
   </div>
