#3437 Refactor article HTML; modularize article components; add icon sprites

--- a/story/index.html
+++ b/story/index.html
@@ -16,7 +16,7 @@ title: News article
     <div class="large-12 columns">
         <article itemtype="http://schema.org/Article" role="main" class="article">
             <header>
-                <h1 class="title title-large" itemprop="name headline">-Dersom ikke USA griper inn, vil Kina vise tenner i løpet av kort tid</h1>
+                <h1 class="title title--large" itemprop="name headline">-Dersom ikke USA griper inn, vil Kina vise tenner i løpet av kort tid</h1>
                 <figure class="image">
                     <img src="http://gfx.nrk.no//kmkeQg81QQHxCAgkRkZlkgtlJ5B1K14ogh1liWhzqx2g" alt="">
                     <figcaption>
