--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ title: Front page
 
 {% include series-section.html %}
 
-<div class="row nf-desktop-ad"></div>
+<div class="l-row nf-desktop-ad"></div>
 
 <section class="l-container front-section">
   <header class="section--header center">
